--- a/index.html
+++ b/index.html
@@ -8,6 +8,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <h4>Team Members</h4>
+            <h2>PURCHASING/WAREHOUSE</h2>
+        </div>
+        <div class="person">
+            <div class="main-part">
+                <div class="part">
+                    <img src="images/man1.avif" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+                <div class="part">
+                    <img src="images/man1.avif" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+                <div class="part">
+                    <img src="images/man1.avif" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+                <div class="part">
+                    <img src="images/man1.avif" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="hover-part">
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
