Adding Hover part

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Layout1</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <!-- Adding Font Awesome  -->
+
+    <script src="https://kit.fontawesome.com/dd1db64a49.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -16,28 +20,28 @@
         <div class="person">
             <div class="main-part">
                 <div class="part">
-                    <img src="images/man1.avif" alt="">
+                    <img src="images/man man.jpeg" alt="">
                     <div class="content">
                         <h3>Mitchel Mark</h3>
                         <p>Web Developer</p>
                     </div>
                 </div>
                 <div class="part">
-                    <img src="images/man1.avif" alt="">
+                    <img src="images/man man.jpeg" alt="">
                     <div class="content">
                         <h3>Mitchel Mark</h3>
                         <p>Web Developer</p>
                     </div>
                 </div>
                 <div class="part">
-                    <img src="images/man1.avif" alt="">
+                    <img src="images/man man.jpeg" alt="">
                     <div class="content">
                         <h3>Mitchel Mark</h3>
                         <p>Web Developer</p>
                     </div>
                 </div>
                 <div class="part">
-                    <img src="images/man1.avif" alt="">
+                    <img src="images/man man.jpeg" alt="">
                     <div class="content">
                         <h3>Mitchel Mark</h3>
                         <p>Web Developer</p>
@@ -45,7 +49,34 @@
                 </div>
             </div>
             <div class="hover-part">
-
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
             </div>
         </div>
     </div>
