--- a/index.html
+++ b/index.html
@@ -26,49 +26,21 @@
                         <p>Web Developer</p>
                     </div>
                 </div>
-                <div class="part">
-                    <img src="images/man man.jpeg" alt="">
-                    <div class="content">
-                        <h3>Mitchel Mark</h3>
-                        <p>Web Developer</p>
-                    </div>
-                </div>
-                <div class="part">
-                    <img src="images/man man.jpeg" alt="">
-                    <div class="content">
-                        <h3>Mitchel Mark</h3>
-                        <p>Web Developer</p>
-                    </div>
-                </div>
-                <div class="part">
-                    <img src="images/man man.jpeg" alt="">
-                    <div class="content">
-                        <h3>Mitchel Mark</h3>
-                        <p>Web Developer</p>
-                    </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
                 </div>
             </div>
-            <div class="hover-part">
-                <div class="main">
-                    <h3>Mitchel Mark</h3>
-                    <p>Web Developer</p>
-                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
-                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
-                </div>
-                <div class="main">
-                    <h3>Mitchel Mark</h3>
-                    <p>Web Developer</p>
-                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
-                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
-                </div>
-                <div class="main">
-                    <h3>Mitchel Mark</h3>
-                    <p>Web Developer</p>
-                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
-                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+            <div class="main-part">
+                <div class="part">
+                    <img src="images/man man.jpeg" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
                 </div>
                 <div class="main">
                     <h3>Mitchel Mark</h3>
@@ -78,6 +50,40 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
                 </div>
             </div>
+            <div class="main-part">
+                <div class="part">
+                    <img src="images/man man.jpeg" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
+            </div>
+            <div class="main-part">
+                <div class="part">
+                    <img src="images/man man.jpeg" alt="">
+                    <div class="content">
+                        <h3>Mitchel Mark</h3>
+                        <p>Web Developer</p>
+                    </div>
+                </div>
+                <div class="main">
+                    <h3>Mitchel Mark</h3>
+                    <p>Web Developer</p>
+                    <i class="fa-regular fa-envelope"></i>abc@gmail.com <br>
+                    <i class="fa-solid fa-calendar-check"></i> 4 Years of Experience <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
+                </div>
+            </div>
+                
+            
         </div>
     </div>
 </body>
