--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout1</title>
 
+
+    <!-- Adding CSS StyleSheet  -->
     <link rel="stylesheet" href="style.css">
 
     <!-- Adding Font Awesome  -->
@@ -18,6 +20,8 @@
             <h2>PURCHASING/WAREHOUSE</h2>
         </div>
         <div class="person">
+
+            <!-- Main Part Start Here  -->
             <div class="main-part">
                 <div class="part">
                     <img src="images/man man.jpeg" alt="">
@@ -36,6 +40,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
                 </div>
             </div>
+
+            <!-- Main Part Start Here  -->
             <div class="main-part">
                 <div class="part">
                     <img src="images/man man.jpeg" alt="">
@@ -54,6 +60,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
                 </div>
             </div>
+
+             <!-- Main Part Start Here  -->
             <div class="main-part">
                 <div class="part">
                     <img src="images/man man.jpeg" alt="">
@@ -72,6 +80,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nemo possimus odio modi ipsum doloribus dicta rerum ea quis pariatur.</p>
                 </div>
             </div>
+
+             <!-- Main Part Start Here  -->
             <div class="main-part">
                 <div class="part">
                     <img src="images/man man.jpeg" alt="">
